5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1638_87.log
== TEST (2019-04-16 00:57:39) 
-- CODE:
x = float (input("Digite um numero x:"))
y = float(input("Digite um numero y:"))
z = float (input("Digite uma numero z:"))
a = x<y
b = x<z
c = y<z
#if ()
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:27:42) 
-- CODE:
x = int (input("Digite um numero x:"))
y = int(input("Digite um numero y:"))
z = int (input("Digite uma numero z:"))
a = x<y
b = x<z
c = y<z
d = x>z
e = x>y
if (a and b):
	print (x)
else (c and d):
	print (y)

-- ERROR:
File "XXXX", line 11
    else (c and d):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:33:40) 
-- CODE:
n1 = int (input("Digite um numero x:"))
n2 = int(input("Digite um numero y:"))
n3 = int (input("Digite uma numero z:"))
menor = n1
if (menor>n2):
	menor = n2
if (menor>n3):
	menor = n3
print ("Menor:  %d " %menor)	


-- OUTPUT:
Menor:  35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 01:34:07) 
-- CODE:
n1 = int (input("Digite um numero x:"))
n2 = int(input("Digite um numero y:"))
n3 = int (input("Digite uma numero z:"))
menor = n1
if (menor>n2):
	menor = n2
if (menor>n3):
	menor = n3
print (menor)	


-- EXECUTION TIME:
0.228577
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
